# EDSParser

./: .gitignore  CMakeLists.txt  EDSParserConfig.cmake.in  INSTALL.sh  README.md  UNINSTALL.sh  clean_data.sh
data/eds/: chr1337_n20l20.peds  chr1337_n3l20.peds  simple.eds  simple.seds  simple_l5.eds  test2.eds  test2.seds  test_adjacent_degenerate.eds  test_adjacent_degenerate_l1.eds  test_adjacent_internal.eds  test_adjacent_internal_l1.eds  test_degenerate_at_end.eds  test_degenerate_at_end_l4.eds  test_iterative.eds  test_iterative_l4.eds  test_linear_sources.eds  test_linear_sources.seds  test_linear_sources_l4.eds  test_linear_sources_l4.seds  test_short_common.eds  test_short_common_l4.eds  test_short_edges.eds  test_short_edges_l4.eds  test_short_first_common.eds  test_short_first_common_l4.eds  test_with_sources.eds  test_with_sources.seds
data/msa/: small.eds  small.msa  small.seds  small_l3.eds  small_l3.seds
data/vcf/: chr21_test.vcf  small.eds  small.fa  small.seds  small.vcf  small_l3.leds  small_l3.seds  test_overlaps.eds  test_overlaps.fa  test_overlaps.seds  test_overlaps.vcf  test_samepos.vcf
experiments/: README.md  clean_experiments.sh  generate_patterns.sh  generate_statistics.sh  run_experiment.sh  transform_to_eds.sh
src/cpp/: CMakeLists.txt
src/cpp/lib/: CMakeLists.txt  common.cpp  common.hpp
src/cpp/lib/formats/: eds.cpp  eds.hpp
src/cpp/lib/transforms/: eds_transforms.cpp  eds_transforms.hpp  msa_transforms.cpp  msa_transforms.hpp  vcf_transforms.cpp  vcf_transforms.hpp
src/cpp/tools/: CMakeLists.txt  eds2leds.cpp  genpatterns.cpp  genrandomeds.cpp  msa2eds.cpp  stats.cpp  vcf2eds.cpp
tests/cpp/: test_eds.cpp  test_merge.cpp  test_msa.cpp  test_sources.cpp  test_stats.cpp  test_vcf.cpp
